[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Data" type="TextEdit" parent="Control/Panel"]
anchor_left = 0.1875
anchor_top = 0.106667
anchor_right = 0.8125
anchor_bottom = 0.426667
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Level" type="Label" parent="Control/Panel"]
anchor_left = 0.109375
anchor_top = 0.16
anchor_right = 0.171875
anchor_bottom = 0.183333
text = "Level: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Increase_Level" type="Button" parent="Control/Panel"]
anchor_left = 0.109375
anchor_top = 0.2
anchor_right = 0.171875
anchor_bottom = 0.306667
text = "+"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Decrease_Level" type="Button" parent="Control/Panel"]
anchor_left = 0.109375
anchor_top = 0.32
anchor_right = 0.171875
anchor_bottom = 0.426667
text = "-"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Health" type="Label" parent="Control/Panel"]
anchor_left = 0.828125
anchor_top = 0.16
anchor_right = 0.890625
anchor_bottom = 0.183333
text = "Health: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Increase_Health" type="Button" parent="Control/Panel"]
anchor_left = 0.828125
anchor_top = 0.2
anchor_right = 0.890625
anchor_bottom = 0.306667
text = "+"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Decrease_Health" type="Button" parent="Control/Panel"]
anchor_left = 0.828125
anchor_top = 0.32
anchor_right = 0.890625
anchor_bottom = 0.426667
text = "-"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SlotNumber" type="Label" parent="Control/Panel"]
anchor_left = 0.1875
anchor_top = 0.0533333
anchor_right = 0.8125
anchor_bottom = 0.0933333
text = "Slot Number : 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerNameEdit" type="LineEdit" parent="Control/Panel"]
anchor_left = 0.375
anchor_top = 0.493333
anchor_right = 0.625
anchor_bottom = 0.546667
align = 1
placeholder_text = "Player Name"
placeholder_alpha = 0.3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerName" type="Label" parent="Control/Panel"]
anchor_left = 0.375
anchor_top = 0.466667
anchor_right = 0.625
anchor_bottom = 0.49
text = "Player Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveSlot1" type="Button" parent="Control/Panel"]
anchor_left = 0.109375
anchor_top = 0.6
anchor_right = 0.34375
anchor_bottom = 0.706667
text = "Save Slot 1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoadSlot1" type="Button" parent="Control/Panel"]
anchor_left = 0.109375
anchor_top = 0.72
anchor_right = 0.34375
anchor_bottom = 0.826667
margin_top = -3.05176e-05
text = "Load Slot 1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DeleteSlot1" type="Button" parent="Control/Panel"]
anchor_left = 0.109375
anchor_top = 0.84
anchor_right = 0.34375
anchor_bottom = 0.946667
margin_top = 3.05176e-05
text = "De≈ülete Slot 1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveSlot2" type="Button" parent="Control/Panel"]
anchor_left = 0.382813
anchor_top = 0.6
anchor_right = 0.617188
anchor_bottom = 0.706667
text = "Save Slot 2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoadSlot2" type="Button" parent="Control/Panel"]
anchor_left = 0.382813
anchor_top = 0.72
anchor_right = 0.617188
anchor_bottom = 0.826667
margin_top = -3.05176e-05
text = "Load Slot 2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DeleteSlot2" type="Button" parent="Control/Panel"]
anchor_left = 0.382813
anchor_top = 0.84
anchor_right = 0.617188
anchor_bottom = 0.946667
margin_top = 3.05176e-05
text = "Delete Slot 2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveSlot3" type="Button" parent="Control/Panel"]
anchor_left = 0.65625
anchor_top = 0.6
anchor_right = 0.890625
anchor_bottom = 0.706667
text = "Save Slot 3"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LoadSlot3" type="Button" parent="Control/Panel"]
anchor_left = 0.65625
anchor_top = 0.72
anchor_right = 0.890625
anchor_bottom = 0.826667
margin_top = -3.05176e-05
text = "Load Slot 3"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DeleteSlot3" type="Button" parent="Control/Panel"]
anchor_left = 0.65625
anchor_top = 0.84
anchor_right = 0.890625
anchor_bottom = 0.946667
margin_top = -3.05176e-05
text = "Delete Slot 3"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Control/Panel/Increase_Level" to="." method="_on_Increase_Level_pressed"]
[connection signal="pressed" from="Control/Panel/Decrease_Level" to="." method="_on_Decrease_Level_pressed"]
[connection signal="pressed" from="Control/Panel/Increase_Health" to="." method="_on_Increase_Health_pressed"]
[connection signal="pressed" from="Control/Panel/Decrease_Health" to="." method="_on_Decrease_Health_pressed"]
[connection signal="pressed" from="Control/Panel/SaveSlot1" to="." method="_on_SaveSlot1_pressed"]
[connection signal="pressed" from="Control/Panel/LoadSlot1" to="." method="_on_LoadSlot1_pressed"]
[connection signal="pressed" from="Control/Panel/DeleteSlot1" to="." method="_on_DeleteSlot1_pressed"]
[connection signal="pressed" from="Control/Panel/SaveSlot2" to="." method="_on_SaveSlot2_pressed"]
[connection signal="pressed" from="Control/Panel/LoadSlot2" to="." method="_on_LoadSlot2_pressed"]
[connection signal="pressed" from="Control/Panel/DeleteSlot2" to="." method="_on_DeleteSlot2_pressed"]
[connection signal="pressed" from="Control/Panel/SaveSlot3" to="." method="_on_SaveSlot3_pressed"]
[connection signal="pressed" from="Control/Panel/LoadSlot3" to="." method="_on_LoadSlot3_pressed"]
[connection signal="pressed" from="Control/Panel/DeleteSlot3" to="." method="_on_DeleteSlot3_pressed"]
